methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:2: error: Missing closing brace `}' assumed here
def isFacingTrail():Boolean = {
^SlugTracking:2: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugTracking:11: error: expected class or object definition
while (estSurBiscuit==false) {
^