methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    if (getCouleurSol()==Color.green) {
      backward(); brushDown();brushUp(); forward();
    } else {
      backward(); left();
    }
  return true
}

while (estSurBiscuit==false) {
    if (estFaceMur()==true) {
      left();
    }
  	if (isFacingTrail() ==true) {
      forward();brushUp();
    }
